--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600;700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  * {
+    font-family: inherit;
+  }
+  
+  button {
+    cursor: pointer;
+  }
+}
 
 :root {
   --radius: 0.5rem;
